<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/security"
        android:layout_width="297dp"
        android:layout_height="65dp"
        android:text="@string/store_delivery_app"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="299dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pswdTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security"
        />

    <EditText
        android:id="@+id/pswdTextField"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:hint="@string/password"

        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

    <Button
        android:id="@+id/newAccountButton"
        android:layout_width="190dp"
        android:layout_height="58dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="149dp"
        android:backgroundTint="@color/black"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ansTextField" />

    <TextView
        android:id="@+id/quesLabel"
        android:layout_width="296dp"
        android:layout_height="27dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="12dp"
        android:text="@string/security_question"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ansTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pswdTextField" />

    <EditText
        android:id="@+id/ansTextField"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quesLabel"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>